# function-sampler

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Cargo.toml  LICENSE  README.md  build-wheels.sh  performance_log.jsonl  pyproject.toml  requirements.txt  setup.py  test.ipynb
.circleci/: config.yml
.github/workflows/: CI.yml
ci/: Dockerfile.cibw_aarch64  Dockerfile.cibw_x86_64  build_push_images.sh
function-sampler/: config.py  logger.py  sampler.py  utils.py
function-sampler/config/: token_mapper.py  utils.py
function_sampler/: __init__.py  cache.py  handlers.py  json.py  logger.py  regex_constants.py  sampler.py  ts_prompt.py  utils.py
function_sampler/config/: __init__.py  config.py  default_map.json  token_mapper.py  utils.py
function_sampler/fsm/: __init__.py  fsm.py  regex.py  tokenizer_fsm_patch.py  utils.py
function_sampler/fsm/fsm_utils/src/: lazy_index.rs  lib.rs  tokenizer_index.rs  types.rs
notebooks/: Tool_Call_Sampler_demo.ipynb
tests/: test_fsm_comp_time.py
wheelhouse/: function_sampler-0.1.8-cp310-cp310-manylinux_2_28_x86_64.whl  function_sampler-0.1.8-cp311-cp311-manylinux_2_28_x86_64.whl  function_sampler-0.1.8-cp312-cp312-manylinux_2_28_x86_64.whl  function_sampler-0.1.8-cp39-cp39-manylinux_2_28_x86_64.whl  function_sampler-0.1.8-pp310-pypy310_pp73-manylinux_2_28_x86_64.whl  function_sampler-0.1.8-pp39-pypy39_pp73-manylinux_2_28_x86_64.whl
