[package]
name = "function_sampler"  ## this will be the submodule name
version = "0.1.1"
edition = "2021"


[lib]
crate-type = ["cdylib"]
path = "function_sampler/fsm/fsm_utils/src/lib.rs"

# Dependencies for this specific package
[dependencies]
regex-automata = { git = "https://github.com/unaidedelf8777/regex.git", rev = "706c51454e7587102c7710662e980d0af5860926" }
pyo3 = { version = "0.21.1", features = ["extension-module"] }
rayon = "1.10.0"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# make sure to strip any debug info from binary
# this way it loads to python faster!
strip = true
