[tool.poetry]
name = "function-sampler"
packages = [
    { include = "function_sampler" },
]
version = "0.1.4"
description = "Function calling Logit Sampler"
authors = ["Nathan Hoos <thwackyy.y@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.38.2"
pydantic = "^2.6.3"
diskcache = "^5.6.3"
cloudpickle = "^3.0.0"
numba = "^0.59.0"
datasets = "^2.18.0"
referencing = "^0.33.0"
interegular = "^0.3.3"
jsonref = "^1.1.0"
torch = "^2.2.2"
joblib = "^1.3.2"
jsonschema = "^4.21.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.1"
maturin = "^1.5.1"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.maturin]
module-name = "function_sampler.fsm.fsm_utils"
version = "0.1.3"
rust-version = "1.77.1" 

[lib]
name = "fsm_utils" 
crate-type = ["cdylib"]  
