[tool.poetry]
name = "function-sampler"
packages = [
    { include = "function_sampler" },
]
version = "0.1.7"
description = "Function calling Logit Sampler"
authors = ["Nathan Hoos <thwackyy.y@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
url = "https://github.com/unaidedelf8777/function-sampler/"

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.38.2"
pydantic = "^2.6.3"
diskcache = "^5.6.3"
cloudpickle = "^3.0.0"
datasets = "^2.18.0"
referencing = "^0.33.0"
jsonref = "^1.1.0"
torch = "^2.2.2"
joblib = "^1.3.2"
jsonschema = "^4.21.1"
interegular = "0.3.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.1"
pre-commit = "^3.7.0"
setuptools-rust = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.maturin]
module-name = "function_sampler.fsm.fsm_utils"
version = "0.1.3"
rust-version = "1.77.1" 

[lib]
name = "fsm_utils" 
crate-type = ["cdylib"]  
